--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -47,5 +47,7 @@
 @media screen and (max-width: 480px) {
     .experience{
         transform: scale(0.7);
+        margin-bottom: 100px;
+        border: 1px solid black;
     }
 }
